.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r2ls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r2ls
  template:
    metadata:
      labels:
        app: r2ls
    spec:
      containers:
        - name: dash
          image: r2ls-dash:dev
          ports:
            - containerPort: 80
