.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: r2ls-dash
spec:
  type: LoadBalancer
  selector:
    app: r2ls
  ports:
    - port: 80
      targetPort: 80
