.kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r2ls-dash
spec:
  rules:
    - host: r2ls-dash.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: r2ls-dash
                port:
                  number: 80
...
